--- a/CHL-Frontend/src/app/components/patient/medical-data/medical-data.component.scss
+++ b/CHL-Frontend/src/app/components/patient/medical-data/medical-data.component.scss
@@ -86,10 +86,11 @@
                     .update-form-container {
                         display: grid;
                         grid-template-columns: 1fr 1fr;
-                        grid-template-rows: 1fr 1fr 1fr 2fr;
+                        grid-template-rows: 1fr 1fr 1fr 1fr 2fr;
                         gap: 0em 0em;
                         grid-auto-flow: row;
                         grid-template-areas:
+                            ". ."
                             ". ."
                             ". ."
                             ". ."
