--- a/CHL-Frontend/src/app/components/login-page/login/login.component.scss
+++ b/CHL-Frontend/src/app/components/login-page/login/login.component.scss
@@ -131,10 +131,7 @@
                     font-size: 0.8em;
                     line-height: 1em;
                     color: #1A1A1A;
-                }
-
-                
-            }
+                }}
             #login-btn {
                 width: 6em;
                 margin-bottom: 1em;
