--- a/CHL-Frontend/src/app/components/patient/patient-registration/patient-registration.component.scss
+++ b/CHL-Frontend/src/app/components/patient/patient-registration/patient-registration.component.scss
@@ -17,6 +17,44 @@
         align-items: center;
         margin: 0;
         padding: 0;
+        
+        #image-container {
+            width: 40%;
+            height: 100%;
+            display:flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+            #reg-image{
+                height: 19em;
+                width:26em;
+    
+            }
+        
+        .content{
+            text-align: center;
+            font-family: 'Montserrat';
+            font-style: normal;
+            margin-left: 3em;
+            padding-left: 3.5em;
+        
+            #main-text {
+                color: #2C2D2D;
+                font-weight: 700;
+                font-size: 1.7em;
+                line-height: 2em;
+            }
+            
+            #moto-text {
+                font-weight: 400;
+                font-size: 0.8em;
+                line-height: 1em;
+                letter-spacing: 0.1em;
+                color: #737373;
+                width: 22em;
+            }
+        }
+        }
 
         #reg-container {
             width: 42%;
