--- a/CHL-Frontend/src/app/components/patient/patient-dashboard/patient-dashboard.component.scss
+++ b/CHL-Frontend/src/app/components/patient/patient-dashboard/patient-dashboard.component.scss
@@ -43,7 +43,7 @@
             .main-flex {
                 display: flex;
                 flex-direction: column;
-
+                gap: 2em;
                 .chart0 {
                     display: flex;
                     flex-direction: row;
