--- a/CHL-Frontend/src/app/common/dropdown/dropdown.component.html
+++ b/CHL-Frontend/src/app/common/dropdown/dropdown.component.html
@@ -1,4 +1,5 @@
 <select [ngStyle]="dropConfig.styles" #state (change)="emitEvent(state.value)">
+    <option value="none" selected disabled hidden>Select</option>
     <option *ngFor="let state of states">
         {{state}}
     </option>
