--- a/CHL-Frontend/src/app/components/patient/personal-details/personal-details.component.scss
+++ b/CHL-Frontend/src/app/components/patient/personal-details/personal-details.component.scss
@@ -1,156 +1,150 @@
-#main-container{
+.main-container {
     width: 100vw;
     height: 100vh;
-}
 
-#nav{
-    height:7%;
-    width: 100%;
-}
+    #nav {
+        height: 7%;
+        width: 100%;
+    }
 
- #parent-container{
-    background-color: #F5FEFF;
-    height:93%;
-    width: 100%;
-    display: flex;
-    flex-direction: row;
+    .subcontainer {
+        display: flex;
+        flex-direction: row;
+        width: 100%;
+        height: 93%;
+        background-color: #f5feff;
 
- }
- .sidebar{
-    height: 100%;
-    width: 18%;
- }
+        .flex-item1 {
+            width: 18%;
+            height: 100%;
+        }
 
-#sub-container{
-    background-color: #ffff;
-    box-shadow: -1px 2px 5px 4px rgba(115,115,115,0.29);
-    border-radius: 6px;
-    width:77%; 
-    height: 90%;
-    margin: auto;
-}
+        .flex-item2 {
+            width: 82%;
+            height: 100%;
 
-#container{
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
+            .main {
+                margin: 2em;
+                width: 94%;
+                height: 90%;
+                background-color: #fff;
+                box-shadow: 0 0.125em 0.5em rgba(0, 0, 0, 0.15);
+                border-radius: 0.5em;
 
-}
+                #button-div{
+                    margin: 1.25em;
+                    display: flex;
+                    flex-direction: row-reverse;
+                }
 
-#container3{
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: center;
-    width: 100%;
-}
+                #text1 {
+                    font-family: "Montserrat";
+                    font-style: normal;
+                    font-weight: 500;
+                    font-size: 1em;
+                    line-height: 1.25em;
+                    color: #737373;
+                    padding-top: 1.25em;
+                    padding-left: 1.25em;
+                }
 
-#container1{
-    display: flex;
-    flex-direction: row;
-    justify-content: space-evenly;
-    align-items: center;
-    width: 100%;
-}
+                .search-filter {
+                    display: flex;
+                    justify-content: space-between;
+                    margin: 1.25em;
 
-#container2{
-    display: flex;
-    flex-direction: column;
-    width: 100%;
-}
+                    .left {
+                        display: flex;
+                        justify-content: space-between;
 
-#side-bar{
-    width:100%; 
-    height: 100%;
-}
+                        #sort-by {
+                            display: flex;
+                            font-family: 'Montserrat';
+                            font-style: normal;
+                            font-weight: 700;
+                            font-size: 1.25em;
+                            line-height: 1.5em;
+                            letter-spacing: 0.1em;
+                            align-items: flex-end;
+                            color: #000000;
 
-#address-bar{
-    display: flex;
-    flex-direction: row;
-    justify-content: space-evenly;
-    align-items: center;
-    padding: 0px 70px ;
+                        }
+                    }
 
-}
-#sub-container1,#sub-container2{
-    width: 40%;
-    padding: 0px 50px ;
-}
+                    .right {
+                        display: flex;
+                        justify-content: space-between;
+                    }
+                }
 
-label + input:focus {
-    color: #1CB5BD;
-}
+                .outline {
+                    margin-left: 1.25em;
+                    margin-right: 1.25em;
+                    border: 1px solid #EAEBED;
+                    border-radius: 0.625em;
 
-.form-group{
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    align-items: center;
-    width: 100%;
-    padding-bottom: 1em;
-    
-}
+                    .update-form-container {
+                        display: grid;
+                        grid-template-columns: 1fr 1fr;
+                        grid-template-rows: 1fr 1fr 1fr 2fr;
+                        gap: 0em 0em;
+                        grid-auto-flow: row;
+                        grid-template-areas:
+                            ". ."
+                            ". ."
+                            ". ."
+                            ". .";
 
-form{
-    width: 100%;
-    font-family: 'Montserrat';
-    font-style: normal;
-    font-weight: 400;
-    font-size: 20px;
-    line-height: 20px;
-    text-align: right;
-    color: #1A1A1A;
-}
+                        .form-cell {
+                            margin-top: 1.25em;
+                            margin-left: 1.25em;
+                            margin-right: 1.25em;
 
-input{
-    width: 280px;
-    height: 40px;
-    font-family: 'Montserrat';
-    font-style: normal;
-    font-size: 20px;
-    line-height: 20px;
-    color: #1A1A1A;
-}
+                            .cell {
+                                display: grid;
+                                grid-template-columns: 1fr 1.5fr;
+                                grid-template-rows: 1fr;
+                                gap: 0em 0em;
+                                grid-template-areas:
+                                    ". .";
 
-label{
-    font-size: 16px;
-}
+                                label {
+                                    font-family: 'Poppins';
+                                    font-style: normal;
+                                    font-weight: 400;
+                                    font-size: 1em;
+                                    line-height: 1.5em;
+                                    letter-spacing: 0.1em;
+                                    color: #2C2D2D;
+                                }
 
-#text2{
-    font-family: 'Montserrat';
-    font-style: normal;
-    font-weight: 700;
-    font-size: 20px;
-    line-height: 29px;
-    padding-top: 30px;
-    padding-left: 40px;
-    padding-bottom: 50px;
-    color: #2C2D2D;
-}
+                                textarea {
+                                    height: 5em;
+                                    border: 0.0625em solid #949494;
+                                    border-radius: 0.625em;
+                                }
 
-#text1{
-    font-family: 'Montserrat';
-    font-style: normal;
-    font-weight: 500;
-    font-size: 16px;
-    line-height: 20px;
-    color: #737373;
-    padding-top: 30px;
-    padding-left: 40px;
-}
+                                textarea:hover {
+                                    border: 0.0625em solid #737373;
+                                }
 
-#address{
-    width:80%;
-    height: 150px;
-}
+                                textarea:focus {
+                                    border: 1px solid #1CB5BD;
+                                    box-shadow: 0px 0px 6px rgba(28, 181, 189, 0.5);
+                                    outline: none;
+                                }
 
-input:focus{
-    border-color: #1CB5BD;
-    box-shadow: 0 1px 1px rgba(0, 0, 0, 0.075) inset, 0 0 8px #1CB5BD;
-    outline: 0 none;
-}
+                                textarea.ng-touched.ng-invalid {
+                                    border: 0.0625em solid #ee0004;
+                                }
+                            }
 
-#update-btn{
-    padding-top: 2em;
+                        }
+                    }
+
+
+                }
+            }
+        }
+    }
 }
