--- a/CHL-Frontend/src/app/components/doctor/doc-patient-medical-data/doc-patient-medical-data.component.scss
+++ b/CHL-Frontend/src/app/components/doctor/doc-patient-medical-data/doc-patient-medical-data.component.scss
@@ -35,6 +35,16 @@
                 .tabs{
                     padding: 1em;
                 }
+                #text1 {
+                    font-family: "Montserrat";
+                    font-style: normal;
+                    font-weight: 500;
+                    font-size: 1em;
+                    line-height: 1.25em;
+                    color: #737373;
+                    padding-top: 1.25em;
+                    padding-left: 1.25em;
+                }
             }
         }
     }
