--- a/CHL-Frontend/src/app/components/doctor/doc-patient-medical-data/doc-patient-medical-data.component.html
+++ b/CHL-Frontend/src/app/components/doctor/doc-patient-medical-data/doc-patient-medical-data.component.html
@@ -8,7 +8,10 @@
       </div>
       <div class="flex-item2">
         <div class="main">
-            <div class="tabs">
+          <div class="search">
+          <div id="text1"><a routerLink="/patient-dashboard"></a>&lt; &nbsp; Back to Dashboard</div>
+        </div>  
+          <div class="tabs">
                 <tab-navigation [tabs]="menus1"></tab-navigation>
             </div>
             <div class="detail">
