--- a/CHL-Frontend/src/app/common/button/button.component.scss
+++ b/CHL-Frontend/src/app/common/button/button.component.scss
@@ -4,7 +4,7 @@ button {
   flex-direction: row;
   justify-content: center;
   align-items: center;
-  padding: 0.7em 1.8em;
+  // padding: 0.7em 1.8em;
   gap: 0.5em;
   width: 100%;
 
