find patient by username and contact

--- a/CHL-Frontend/src/app/common/button/button.component.html
+++ b/CHL-Frontend/src/app/common/button/button.component.html
@@ -1,5 +1,5 @@
 
-  <button [type]="btnConfig.type" class="btn" [ngStyle]="btnConfig.styles" (click)="onClickBtn($event)">
+  <button [type]="btnConfig.type" [disabled]="disabled" class="btn" [ngStyle]="btnConfig.styles" (click)="onClickBtn($event)">
    {{btntext}}
   </button>
 
