--- a/CHL-Frontend/src/app/components/patient/patient-registration/patient-registration.component.html
+++ b/CHL-Frontend/src/app/components/patient/patient-registration/patient-registration.component.html
@@ -20,7 +20,7 @@
                     <button [ngClass]="{'active': !patientActive}" (click)="addDoctor($event)">Doctor</button>
                 </div>
             </div>
-            <form *ngIf="patientActive==true" [formGroup]="RegistrationForm" (ngSubmit)="onSubmit()">
+            <form *ngIf="patientActive==true" [formGroup]="RegistrationForm" >
                 <div class="main-form">
                     <div class="form-group">
                         <div class="form-flex">
@@ -39,7 +39,10 @@
                         </div>
                         <div class="form-flex">
                             <label for="contact">Contact Number </label>
-                            <app-input [ipConfig]="ipConfig1" (outputEmit)="patient.phoneNo=$event"></app-input>
+                            <app-input [ipConfig]="ipConfig1" (outputEmit)="patient.phoneNo=$event" (change)="onPhoneNo()"></app-input>
+                            <div *ngIf="contactExists" class="userexists" style="color: red;">
+                                This number is already registered*
+                        </div>
                         </div>
                     </div>
                     <div class="form-group">
@@ -55,7 +58,10 @@
                     <div class="form-group">
                         <div class="form-flex">
                             <label for="userID">User ID</label>
-                            <app-input [ipConfig]="ipConfig" (outputEmit)="patient.username=$event"></app-input>
+                            <app-input [ipConfig]="ipConfig" (outputEmit)="patient.username=$event" (change)="onUserID()"></app-input>
+                            <div *ngIf="usernameExists" class="userexists" style="color: red;">
+                                    This username already exists*
+                            </div>
                         </div>
                         <div class="form-flex">
                             <label for="password">Password </label>
@@ -64,7 +70,7 @@
                     </div>
                     <br>
                     <div id="login-btn">
-                        <app-button [btntext]="'Register'" [btnConfig]="textBtnConfig" (onClick)="openPopup()"></app-button>
+                        <app-button [disabled]="btndisable" [btntext]="'Register'" [btnConfig]="textBtnConfig" (onClick)="openPopup()" (click)="onSubmit()"></app-button>
                     </div>
                 </div>
             </form>
