basic form layout created

--- a/CHL-Frontend/src/app/components/doctor/doc-add-medical-record/add-medical-record/add-medical-record.component.html
+++ b/CHL-Frontend/src/app/components/doctor/doc-add-medical-record/add-medical-record/add-medical-record.component.html
@@ -31,6 +31,9 @@
                         <div>f</div>
                         <div>g</div>
                     </div>
+                    <!--current med table-->
+                    <div class="current-med">current med table</div>
+                    <div class="advice">advice</div>
                 </div>
             </div>
         </div>
